--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -1,6 +1,4 @@
-
-<html lang="en">
- <head>
+<head>
  <meta charset="UTF-8"> 
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Mon Application</title>
@@ -9,5 +7,6 @@
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
  <link rel="stylesheet" type="text/css" href="/css/style.css">
- <script src="https://use.fontawesome.com/e64c71857d.js"></script>
+ <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+ <script src="/socket.io/socket.io.js"></script>
  </head> 
