--- a/views/components/entete.ejs
+++ b/views/components/entete.ejs
@@ -4,6 +4,7 @@
  <a href='/vider'><i class="material-icons">delete_forever</i><%= __('vide') %></a>
  <a href='/'><i class="material-icons">home</i><%= __('accueil') %></a>
  <a href='/list'><i class="material-icons">tab</i><%= __('adresse') %></a>
+ <a href='/chat'><i class="material-icons">tab</i><%= __('clavader') %></a>
  <a href='/peupler'><i class="material-icons">supervisor_account</i><%= __('peupler') %></a>
  <a href='/fr'>FR</a>
  <span>|</span>
